--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^5.0.0
   fluttertoast: ^3.1.3
   font_awesome_flutter: ^8.12.0
+  dropdownfield: 1.0.0
 
 dev_dependencies:
   flutter_test:
