--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,6 +67,14 @@
     	</dict>
     </array>
     <!-- End of the Google Sign-in Section -->
+    <!-- image_picker Section -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Your photo Library is required for this app</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Your  Camera is required for this app</string>
+     <key>NSMicrophoneUsageDescription</key>
+     <string>Your microphone is required for this app</string>
+    <!-- End of the image_picker Section -->
 </dict>
 </plist>
 
