--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   firebase_analytics: ^7.0.1
   google_sign_in: ^4.5.9
   flutter_signin_button: ^1.1.0
-  flutter_ui: ^0.0.9
   provider: ^5.0.0
   fluttertoast: ^3.1.3
   font_awesome_flutter: ^8.12.0
   dropdownfield: 1.0.0
+  cached_network_image: ^2.0.0-rc
+  image_picker: any
 
 dev_dependencies:
   flutter_test:
